--- a/Gastronomia/index.html
+++ b/Gastronomia/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/app.css">
     <title>Gastronomia</title>
 </head>
-<body>
-    
+<body background="tu_imagen.jpg" style="background-repeat: no-repeat; background-position: center center;">
+    <div class="row">
+        <div class="columns medium-4 large-4 hide-for-small-only">
+            <h1>Gastronomia</h1>
+            <h1><small>Cocinar es facil</small></h1>
+            <input type="search" placeholder="Search" style="border-radius: 10px;">
+            <li><a href="#"><button class="hollow button">Inicio</button></li></a>
+            <li><a href="#"><button class="hollow button">Mi plato perfecto</button></li></a>
+            <li><a href="#"><button class="hollow button">Mis recetas</button></li></a>
+            <h3>Favoritos</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="columns medium-6"><img src="./img/Fav1.jpg" width="10%"></div>
+                    <div class="columns medium-6"><img src="./img/Fav2.jpg" width="10%"></div>
+                    <div class="columns medium-6"><img src="./img/fav3.png" width="10%"></div>
+                    <div class="columns medium-6"><img src="./img/fav4.jpg" width="10%"></div>
+                    <div class="columns medium-6"><img src="./img/fav5.jpg" width="10%"></div>
+                    <div class="columns medium-6"><img src="./img/fav6.jpg" width="10%"></div>
+                </div>
+            </div>
+            <h3>Historial</h3>
+            <ul>
+                <li>
+                    <a href="#">Como hacer un cheesecake en 20 minutos</a>
+                </li>
+                <li>
+                    <a href="#">Tips para hacer que la comida se vea mejor</a>
+                </li>
+                <li>
+                    <a href="#">Como hacer una torta en una taza en cinco minutos</a>
+                </li>
+                <li>
+                    <a href="#">10 Comidas faciles para invierno</a>
+                </li>
+            </ul>
+        </div>
+        <div class="columns medium-8 large-8 small-12">
+            <h3>Como hacer Trufas de chocolate facil</h3>
+            <img src="./img/Trufas de chocolate.jpg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quaerat error minus repellendus, sint provident commodi aut ab perferendis eum quisquam quas natus sunt sequi repudiandae ut nisi exercitationem laudantium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis a sint facere sunt aliquid, animi unde culpa quasi ducimus esse ab odit, quia molestiae doloremque voluptatibus fugit blanditiis possimus? Minus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum soluta adipisci ullam, ipsum ratione vel velit ab laborum id fugit dignissimos iure delectus sint animi pariatur distinctio deserunt! Debitis, doloribus?</p>
+            <label>
+                <textarea name="comentario" cols="30" rows="1" placeholder="Comentario..."></textarea>
+            </label>
+            <br>
+            <br>
+            <h3>Receta de helado de chocolate casero</h3>
+            <img src="./img/Helado de chocolate.jpg">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur totam quos velit non minima doloremque blanditiis, voluptatem deserunt amet. Optio esse expedita quis minus quos. Quae molestias labore distinctio beatae? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti sunt fuga quam reprehenderit distinctio laudantium vitae blanditiis laborum, consequuntur aliquid placeat hic animi repellat in quod natus numquam mollitia voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ab officia ut. Labore fugit sapiente laboriosam qui mollitia distinctio nam reprehenderit, libero a assumenda quas laudantium voluptates aspernatur eum blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nam expedita at obcaecati quaerat! Quae quos voluptatem reprehenderit natus autem iure amet, in perferendis placeat aperiam nulla consequatur, ratione aut.</p>
+            <label>
+                <textarea name="comentario" cols="30" rows="1" placeholder="Comentario..."></textarea>
+            </label>
+        </div>
+    </div>
+    <script src="./js/app.js"></script>
+    <script src="./js/app.js.map"></script>
 </body>
 </html>
