Corrección de Turismo

--- a/Musica/index.html
+++ b/Musica/index.html
@@ -31,8 +31,8 @@
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   
-    <div class="navbar" id="navbarSupportedContent" style="color: chocolate;">
-      <ul class="navbar-nav mr-auto-md-12">
+    <div class="navbar visible-desktop" id="navbarSupportedContent" style="color: chocolate;">
+    <ul class="navbar-nav mr-auto-md-12">
         <li class="nav-item">
           <a class="nav-link" href="#">Inicio</a>
         </li>
