--- a/Musica/index.html
+++ b/Musica/index.html
@@ -9,52 +9,54 @@
     <title>Document</title>
 </head>
 <body style="background-color: chocolate;">
-  <div class="container" style="background-color: white;">
+  <div class="container">
     <div class="row">
-      <div class="col-md-1 col-sm-2"><header><img src="./img/blogger_icon-icons.com_59226.svg"></header></div>
-    </div>
-  </div>
-  <div class="continer">
-    <div class="row">
-      <div class="col-md6 offset-md-4">
+      <div class="col-sm-6 offset-md-3">
         <ul class="list-group list-group-horizontal">
-          <li class="list-group-item"><img src="./img/Facebook_icon.png"></li>
-          <li class="list-group-item"><img src="./img/Instagram_icon.png"></li>
-          <li class="list-group-item"><img src="./img/pinterest_icon.png"></li>
-          <li class="list-group-item"><img src="./img/twitter-icon.png"></li>
-          <li class="list-group-item"><img src="./img/youtube_icon.png"></li>
+          <li class="list-group-item"><img src="./img/blogger_icon-icons.com_59226.png" width="100%"></li>
+          <li class="list-group-item"><img src="./img/Facebook_icon.png" width="100%"></li>
+          <li class="list-group-item"><img src="./img/Instagram_icon.png" width="100%"></li>
+          <li class="list-group-item"><img src="./img/pinterest_icon.png" width="100%"></li>
+          <li class="list-group-item"><img src="./img/twitter-icon.png" width="100%"></li>
+          <li class="list-group-item"><img src="./img/youtube_icon.png" width="100%"></li>
         </ul>
       </div>
     </div>
   </div>
-  
-  
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  
-    <div class="navbar visible-desktop" id="navbarSupportedContent" style="color: chocolate;">
-    <ul class="navbar-nav mr-auto-md-12">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#artista">Artista</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#grupos">Grupos</a>
-        </li>
-        <li class="nav-item">
-          <a href="#top10" class="nav-link">Top10</a>
-        </li>
-        <li class="nav-item">
-          <a href="#letras" class="nav-link">Letras</a>
-        </li>
-        <li class="nav-item">
-          <a href="#acorders" class="nav-link">Acordes</a>
-        </li>
-        <li></li>
-      </ul>
+  <div class="container">
+    <div class="row d-none d-md-block" style="background-color: #F6DA86;">
+      <div class="col-sm-12 col-md-2">
+        <ul class="list-group list-group-horizontal">
+          <a href="#">Inicio</a>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul class="list-group list-group-horizontal">
+          <a href="#">Grupos</a>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul class="list-group list-group-horizontal">
+          <a href="#">Artistas</a>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul class="list-group list-group-horizontal">
+          <a href="#">Top 10</a>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul class="list-group list-group-horizontal">
+          <a href="#">Letras</a>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <ul class="list-group list-group-horizontal">
+          <a href="#">Acordes</a>
+        </ul>
+      </div>
     </div>
-  </nav>
+  </div>
   <br>
   
   <div class="container" style="background-color: white;">
